Table User {
  id int [pk, increment]
  username varchar [unique, not null]
  email varchar [unique, not null]
  profilePicture varchar [null]
  password varchar [not null]
  createdAt timestamp [default: `CURRENT_TIMESTAMP`]
}

Table Roadmap {
  id int [pk, increment]
  title varchar [not null]
  description varchar [null]
  user_id int [unique, not null, ref: > User.id]
}

Table RoadmapItem {
  id int [pk, increment]
  title varchar [not null]
  description varchar [null]
  order int [default: 0]
  roadmap_id int [not null, ref: > Roadmap.id]
}

Table Task {
  id int [pk, increment]
  title varchar [not null]
  description varchar [null]
  completed boolean [default: false]
  roadmap_item_id int [not null, ref: > RoadmapItem.id]
}

Table Documentation {
  id int [pk, increment]
  title varchar [not null]
  link varchar [null]
  roadmap_item_id int [not null, ref: > RoadmapItem.id]
}

Table Resource {
  id int [pk, increment]
  title varchar [not null]
  link varchar [null]
  roadmap_item_id int [not null, ref: > RoadmapItem.id]
}
